--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -30,3 +30,6 @@
 1.0.11:
     - 'Created table luismayta_coordinacion_tareas'
     - builder_table_create_luismayta_coordinacion_tareas.php
+1.0.12:
+    - 'Updated table luismayta_coordinacion_tareas'
+    - builder_table_update_luismayta_coordinacion_tareas.php
