--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -33,3 +33,18 @@
 1.0.12:
     - 'Updated table luismayta_coordinacion_tareas'
     - builder_table_update_luismayta_coordinacion_tareas.php
+1.0.13:
+    - 'Updated table luismayta_coordinacion_tareas'
+    - builder_table_update_luismayta_coordinacion_tareas_2.php
+1.0.14:
+    - 'Updated table luismayta_coordinacion_sabado'
+    - builder_table_update_luismayta_coordinacion_sabado.php
+1.0.15:
+    - 'Created table luismayta_coordinacion_aportes'
+    - builder_table_create_luismayta_coordinacion_aportes.php
+1.0.16:
+    - 'Updated table luismayta_coordinacion_aportes'
+    - builder_table_update_luismayta_coordinacion_aportes.php
+1.0.17:
+    - 'Updated table luismayta_coordinacion_aportes'
+    - builder_table_update_luismayta_coordinacion_aportes_2.php
