--- a/models/hermanos/columns.yaml
+++ b/models/hermanos/columns.yaml
@@ -2,10 +2,12 @@ columns:
     nombres:
         label: Nombres
         type: text
+        searchable: true
         sortable: true
     apellidos:
         label: Apellidos
         type: text
+        searchable: true
     fecha_nacimiento:
         label: 'Fecha nacimiento'
         type: date
