--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -51,3 +51,15 @@
 1.0.18:
     - 'Created table luismayta_coordinacion_asistencias'
     - builder_table_create_luismayta_coordinacion_asistencias.php
+1.0.19:
+    - 'Updated table luismayta_coordinacion_hermanos'
+    - builder_table_update_luismayta_coordinacion_hermanos_2.php
+1.0.20:
+    - 'Updated table luismayta_coordinacion_hermanos'
+    - builder_table_update_luismayta_coordinacion_hermanos_3.php
+1.0.21:
+    - 'Created table luismayta_coordinacion_servicios'
+    - builder_table_create_luismayta_coordinacion_servicios.php
+1.0.22:
+    - 'Updated table luismayta_coordinacion_hermanos'
+    - builder_table_update_luismayta_coordinacion_hermanos_4.php
