--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -63,3 +63,12 @@
 1.0.22:
     - 'Updated table luismayta_coordinacion_hermanos'
     - builder_table_update_luismayta_coordinacion_hermanos_4.php
+1.0.23:
+    - 'Created table luismayta_coordinacion_actas'
+    - builder_table_create_luismayta_coordinacion_actas.php
+1.0.24:
+    - 'Updated table luismayta_coordinacion_servicios'
+    - builder_table_update_luismayta_coordinacion_servicios.php
+1.0.25:
+    - 'Updated table luismayta_coordinacion_servicios'
+    - builder_table_update_luismayta_coordinacion_servicios_2.php
