--- a/models/hermanos/fields.yaml
+++ b/models/hermanos/fields.yaml
@@ -67,6 +67,12 @@ tabs:
             hidden: 1
             type: text
             tab: 'Datos personales'
+        mes_nacimiento:
+            label: MEs
+            span: auto
+            hidden: 1
+            type: text
+            tab: 'Datos personales'
         foto:
             label: Foto
             mode: image
