--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -75,3 +75,6 @@
 1.0.26:
     - 'Updated table luismayta_coordinacion_hermanos'
     - builder_table_update_luismayta_coordinacion_hermanos_5.php
+1.0.27:
+    - 'Updated table luismayta_coordinacion_hermanos'
+    - builder_table_update_luismayta_coordinacion_hermanos_6.php
