--- a/plugin.yaml
+++ b/plugin.yaml
@@ -7,13 +7,17 @@ plugin:
 navigation:
     main-menu-item:
         label: 'Grupo oracion'
-        url: luismayta/coordinacion/hermanoscontroller
+        url: luismayta/coordinacion/grupooracioncontroller
         icon: icon-users
         sideMenu:
             side-menu-item6:
                 label: Hermanos
                 url: luismayta/coordinacion/hermanoscontroller
                 icon: icon-users
+            side-menu-item10:
+                label: Mensajes
+                url: luismayta/coordinacion/mensajescontroller
+                icon: icon-send
             side-menu-item:
                 label: Reuniones
                 url: luismayta/coordinacion/reunionescontroller
